Update NEWS release date

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 
-2008-??-?? nsdbi-0.2 released
+2008-06-10 nsdbi-0.2 released
 
 * New 'template' and 'default' args to dbi_rows provide an easy way
   to build a formatted result efficiently. The new -append option
