Update version to 0.3

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,9 @@
 
+2008-??-?? nsdbi-0.3 released
+
+* ...
+
+
 2008-06-10 nsdbi-0.2 released
 
 * New 'template' and 'default' args to dbi_rows provide an easy way
